conviction mobile et margin top resolved

--- a/css/footer.css
+++ b/css/footer.css
@@ -12,6 +12,7 @@
     width: 350px;
     display: table;
     margin: 0 auto;
+    margin-top: 30px!important;
     margin-right: 1.5vw !important;
 }
 
@@ -83,6 +84,7 @@
         width: 85%;
         display: table;
         margin: 0 auto;
+        margin-top: 30px!important;
         margin-left: 8vw !important;
     }
 }
@@ -107,6 +109,7 @@
         padding-right: 20px;
         width: 350px;
         display: table;
+        margin-top: 30px!important;
         margin-left: 33%!important;
     }
     #col-logo-footer {
@@ -168,10 +171,10 @@
         transform: rotate(-15deg);
         padding-bottom: 40px;
         padding-right: 20px;
-        width: 85%;
+        width: 70vw;
         display: table;
         margin: 0 auto;
-        margin-right: 40px !important;
+        margin-left: 15vw !important;
     }
 
     #conviction-list {
