--- a/css/stats.css
+++ b/css/stats.css
@@ -90,7 +90,12 @@
         top: -65%;
         text-align: left;
         padding: 15px;
+        padding-top: 5px!important;
         line-height: 100%;
+    }
+
+    .text-desc-div {
+        margin-top: 10px;
     }
 
     .desc-col-right {
